Fixed the gap on the right side of the website when in mobile view

--- a/css/work.css
+++ b/css/work.css
@@ -3,7 +3,7 @@
     background-color: #2C2C2C; /* Dark background */
     color: #ffffff; /* Light text */
     align-items: center;
-    padding: 35px 55px 35px 55px;
+    padding: 35px 45px 35px 45px;
 }
 
 .education-timeline {
